@@ -40,13 +40,22 @@
     <li>[Bugfix] Default path value setting in bookmark ignored (<a
             href="https://trac.cyberduck.io/ticket/9435">#9435</a>)
     </li>
+    <li>[Bugfix] Excessive memory usage when uploading many files (<a
+            href="https://trac.cyberduck.io/ticket/9439">#9439</a>)
+    </li>
+    <li>[Bugfix] Retry transfer when authentication token expires (Backblaze B2)</li>
+    <li>[Bugfix] Uploads use a lot of Class C transactions (<a
+            href="https://trac.cyberduck.io/ticket/9417">#9417</a>) (Backblaze B2)
+    </li>
+    <li>[Bugfix] Retry transfer for 421 error reply from server with a delay (FTP)</li>
+
 </ul>
 
 <p>
     <a href="https://trac.cyberduck.io/milestone/4.9"><strong>Version 4.9</strong></a>
 </p>
 <ul>
-    <li>[Feature] Support for B2 Cloud Storage (Backblaze) (<a
+    <li>[Feature] Support for B2 Cloud Storage (Backblaze B2) (<a
             href="https://trac.cyberduck.io/ticket/9162">#9162</a>)
     </li>
     <li>New bundled application updater using MSI for installation (Windows)</li>
