@@ -10,9 +10,13 @@ Changelog. Last modified: $Date$
 4.9.1
 - [Feature] Support password change requests (SFTP) (#8821)
 - [Bugfix] Default path value setting in bookmark ignored (#9435)
+- [Bugfix] Excessive memory usage when uploading many files (#9439)
+- [Bugfix] Retry transfer when authentication token expires (Backblaze B2)
+- [Bugfix] Uploads use a lot of Class C transactions (#9417) (Backblaze B2)
+- [Bugfix] Retry transfer for 421 error reply from server with a delay (FTP)
 
 4.9 [https://trac.cyberduck.io/milestone/4.9]
-- [Feature] Support for B2 Cloud Storage (Backblaze) (#9162)
+- [Feature] Support for B2 Cloud Storage (Backblaze B2) (#9162)
 - [Feature] New bundled application updater using MSI for installation (Windows)
 - [Bugfix] Creating new folders with SSE restriction fails (S3) (#9378)
 - [Bugfix] Unable to duplicate folders (#9383)
